# coinpeek

./: .gitignore  Cargo.toml  LICENSE  README.md  coinpeek-demo.tape  coinpeek.d.ts  coinpeek.db  coinpeek.db-shm  coinpeek.js  coinpeek.json  coinpeek_bg.wasm.d.ts  index.html  styles.css
.github/workflows/: ci.yml  rust.yml
pkg/: README.md  coinpeek_bg.wasm  package.json
src/: app.rs  binance.rs  config.rs  database.rs  lib.rs  main.rs  ui.rs  web.rs
tests/: api_tests.rs  app_tests.rs  config_tests.rs  database_tests.rs
