[package]
name = "coinpeek"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
ratatui = "0.29"
crossterm = "0.27"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-rusqlite = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockito = "1.0"
