[package]
name = "coinpeek"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
# Optional native dependencies
rusqlite = { version = "0.32", features = ["bundled", "chrono"], optional = true }
tokio-rusqlite = { version = "0.6", optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.27", optional = true }
# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Event",
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlDivElement",
  "Storage",
  "Location",
  "History",
  "Navigator",
] }
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18", optional = true }
gloo = "0.11"
gloo-timers = "0.3"
gloo-net = { version = "0.4", optional = true }
wasm-logger = "0.2"

[features]
default = ["rusqlite", "tokio-rusqlite", "ratatui", "crossterm"]
wasm = ["rusqlite", "gloo-net", "yew-router"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockito = "1.0"
wasm-bindgen-test = "0.3"
# WASM-specific dev dependencies
